Add readable text generator and css files carry

--- a/app/src/assets/main.css
+++ b/app/src/assets/main.css
@@ -1,1 +1,10 @@
 @import './base.css';
+
+
+@font-face {
+  font-family: "JetBrains Mono";
+  src: url("@/assets/fonts/JetBrainsMono-Light.woff2") format("woff2");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
